--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         run: pip install poetry
       - name: Install dependencies
         run: poetry install
-      - name: Install chess
-        run: pip3 install chess
+      - name: Install requirements
+        run: pip install -r requirements.txt
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
       - name: Coverage report
