--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
         run: pip install poetry
       - name: Install dependencies
         run: poetry install
-      - name: Install requirements
-        run: pip install -r requirements.txt
+      - name: Install chess
+        run: poetry run pip install chess
       - name: Run tests
         run: poetry run coverage run --branch -m pytest
       - name: Coverage report
