--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+invoke = "^1.7.3"
+chess = "^1.9.3"
+pylint = "^2.15.5"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 coverage = "^6.5.0"
+pylint = "^2.15.5"
+autopep8 = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
