--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 invoke = "^1.7.3"
 chess = "^1.9.3"
 pylint = "^2.15.5"
+chess-board = "^0.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
